<resources>
    <string name="app_name">DD Lit</string>
    <string name="main_title">DD lit(e)</string>

    <!-- SPLASH ACTIVITY -->
    <string name="splash_text">DoorDash LIT(e)</string>
    <string name="floating_description">Floating info button</string>
    <!-- Request Permissions -->
    <string name ="map_permission_required_string">Without LOCATION permission Maps do not work, allow it in order to start the app.</string>
    <string name ="enable_permissions_string">Please enable permissions: access location</string>
    <string name ="permission_required_title_string">Permission required</string>
    <!-- Network connection -->
    <string name = "no_network_message_string">No Network Service!, Restart the application and switch ON the Network Service. </string>
    <!-- Version -->
    <string name = "version_string">Version </string>


    <!-- MAIN ACTIVITY -->
    <string name="app_my_info">Thank you for reviewing DoorDash Lit(e) - built by Caterina Lazaro</string>

    <!-- TABS AND PAGES STRINGS -->
    <string name="tab_text_1">List</string>
    <string name="tab_text_2">Map</string>
    <string name="page_text">Welcome to the page </string>
    <string name="banner_icon_text">lit icon </string>

    <!-- RESTAURANT LIST FRAGMENT STRINGS-->
    <string name="refresh_text">Refresh</string>
    <string name="more_text">More</string>
    <string name="loading_gif_text">loading</string>
    <string name="restaurant_i_string"> Image Thumbnail</string>

    <!-- RESTAURANT DETAIL FRAGMENT STRINGS-->
    <string name="telephone_label_text"> Call: </string>
    <string name="address_label_text"> Address: </string>

    <!-- MAP NONEXISTENT ACTIVITY -->
    <string name="map_image_text">No Maps</string>
    <string name="map_image_artist"> Photo by Andrew Neel from Pexels </string>
    <string name="map_image_link">https://www.pexels.com/photo/assorted-map-pieces-2859169/</string>
    <string name="no_map_string">Sorry....\n No Maps Available Yet</string>


</resources>