<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_rest_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/fab_margin"
    android:layout_margin="@dimen/fab_margin"
    android:background="@color/white">

    <ImageView
        android:id="@+id/restaurant_image_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/restaurant_i_string"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/restaurant_name_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintTop_creator="0" />

    <TextView
        android:id="@+id/restaurant_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:text = "@string/page_text"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_image_detail"
        app:layout_constraintBottom_toTopOf="@+id/restaurant_address_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintTop_creator="0" />


    <TextView
        android:id="@+id/restaurant_description_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/rest_item_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/rest_item_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAllCaps="false"
        android:textSize="@dimen/rest_item_title_text"
        android:textStyle = "bold"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_name_detail"
        app:layout_constraintBottom_toTopOf="@+id/restaurant_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintTop_creator="0" />


        <TextView
            android:id="@+id/restaurant_address_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_name_detail"
            app:layout_constraintBottom_toTopOf="@+id/restaurant_telephone_number_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/restaurant_address"
            android:text="@string/address_label_text"/>

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_name_detail"
            app:layout_constraintBottom_toTopOf="@+id/restaurant_telephone_number_label"
            app:layout_constraintStart_toEndOf="@+id/restaurant_address_label"
            app:layout_constraintEnd_toEndOf="parent"/>



        <TextView
            android:id="@+id/restaurant_telephone_number_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/telephone_label_text"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/restaurant_telephone_number"/>

        <TextView
            android:id="@+id/restaurant_telephone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/restaurant_telephone_number_label"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>